--- a/index.html
+++ b/index.html
@@ -4,10 +4,67 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="style.css">
     <title>My Portfolio</title>
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Poppins&display=swap" rel="stylesheet">
+    <link rel="stylesheet" href="style.css">
+    
 </head>
 <body>
+
+
+    <section class="first-section">
+        <div class="half-width" >
+            <h1>Welcome to</h1>
+            <h1><span class="orange">Md Shamim</span>  World</h1>
+            <h3>Project Manager, Adventor Global</h3>
+            <p>This is Shamim. I am currently working at Adventor Global as Project Manager. My father name is Shahabuddin. He is a primary teacher (Ret.) .My Mother name is Mst Ferdoshe Ara. She is a housewife. She take care of my family. I have two elder sister. They are very helpful and help me. My hometown is Meherpur.</p>
+            <a class="Hire-Me" target="_blank" href="https://www.linkedin.com/in/meshamim001/">Hire Me</a>
+        </div>
+
+        <div class="half-width">
+            <img class="my-picture" src="images/my-picture.png" alt="">
+        </div>
+    </section>
+
+
+
+    <section class="second-section">
+        <div class="half-width">
+            <img class="my-picture-2" src="images/my-bg-2.png" alt="">
+        </div>
+
+        <div class="half-width">
+            <h1>Dream Big</h1>
+            <h3> Become a project manager</h3>
+            <p class="second-section-text">I have a one year experince about Project Manager. I am highly dedicated in my work. I am used to project management software. For example trello, Click Up.Proven working experience in project management. Excellent client-facing and internal communication skills. Excellent written and verbal communication skills. Solid organizational skills including attention to detail and multitasking skills. Strong working knowledge of Microsoft Office.  </p>
+            <a class="download-resume" target="_blank" href="https://www.linkedin.com/in/meshamim001/">Download Resume</a>
+        </div>
+    </section>
+
+
+
+    <section class="third-section">
+        <div class="full-stack-project-manager">
+           <h2>Full Stack Project Manager</h2>
+           <h5><span class="orange">2023-present | Pro Level Project Manager</span></h5>
+           <p>I am the Master of project Management software trello, Click Up. I know everything needed to make a management function. I did't stop with project management. I went beyond with most popular project management software Trello. I even know the deployment, server, and security. I will give you 100% project solution.</p> 
+        </div>
+
+        <div class="baby-project-manager">
+            <h2>Baby Project Manager</h2>
+            <h5><span class="orange">2022-2023 | Project management learner</span> </h5>
+            <p>Project management is an exciting profession. Moving from one project to another, a project manager continually faces new businesses, new processes and systems, new people, and new situations. Such a dynamic environment helps you learn more all the time, and advances your skills than traditional jobs.</p>
+
+        </div>
+    </section>
+
     
 </body>
+
+<footer class="footer">
+    <p>© Md Shamim 2023, Adventor Global initiative</p>
+</footer>
+
 </html>
