--- a/index.html
+++ b/index.html
@@ -16,8 +16,8 @@
 
     <section class="first-section">
         <div class="half-width" >
-            <h1>Welcome to</h1>
-            <h1><span class="orange">Md Shamim</span>  World</h1>
+            <h1 class="first-heading">Welcome to</h1>
+            <h1 class="second-heading"><span class="orange">Md Shamim</span>  World</h1>
             <h3>Project Manager, Adventor Global</h3>
             <p>This is Shamim. I am currently working at Adventor Global as Project Manager. My father name is Shahabuddin. He is a primary teacher (Ret.) .My Mother name is Mst Ferdoshe Ara. She is a housewife. She take care of my family. I have two elder sister. They are very helpful and help me. My hometown is Meherpur.</p>
             <a class="Hire-Me" target="_blank" href="https://www.linkedin.com/in/meshamim001/">Hire Me</a>
